--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "component-uid": "0.0.2",
     "cookie": "0.1.2",
     "cookie-parser": "1.3.2",
-    "copy-webpack-plugin": "3.0.1",
+    "copy-webpack-plugin": "4.0.1",
     "create-react-class": "15.5.3",
     "creditcards": "2.1.2",
     "cross-env": "4.0.0",
@@ -111,6 +111,7 @@
     "react-day-picker": "2.4.1",
     "react-docgen": "2.13.0",
     "react-dom": "15.4.0",
+    "react-hot-loader": "1.3.1",
     "react-modal": "1.6.5",
     "react-pure-render": "1.0.2",
     "react-redux": "5.0.3",
@@ -139,7 +140,6 @@
     "walk": "2.3.4",
     "webpack": "2.6.1",
     "webpack-dev-middleware": "1.10.2",
-    "webpack-dev-server": "2.4.5",
     "webpack-hot-middleware": "2.18.0",
     "wpcom": "5.4.0",
     "wpcom-oauth": "0.3.3",
@@ -246,7 +246,6 @@
     "prettier": "git+https://github.com/Automattic/calypso-prettier.git#calypso-1.1",
     "react-addons-test-utils": "15.4.0",
     "react-codemod": "github:reactjs/react-codemod",
-    "react-hot-loader": "3.0.0-beta.6",
     "react-test-env": "0.2.0",
     "readline-sync": "1.4.5",
     "sinon": "1.17.7",
@@ -255,7 +254,7 @@
     "stylelint": "6.9.0",
     "supertest": "2.0.0",
     "webpack-bundle-analyzer": "2.8.2",
-    "webpack-dashboard": "0.4.0"
+    "webpack-dashboard": "1.0.0-2"
   },
   "optionalDependencies": {
     "fsevents": "1.1.1"
