Limit fields to those in designs

--- a/client/extensions/woocommerce/lib/get-payment-method-details/details-mappings.json
+++ b/client/extensions/woocommerce/lib/get-payment-method-details/details-mappings.json
@@ -10,6 +10,9 @@
 	},
 	"paypal": {
 		"fees": "2.9% + 30c per transaction",
+		"fields": [
+			"email"
+		],
 		"informationUrl": "https://docs.woocommerce.com/document/paypal-standard/",
 		"isSuggested": true,
 		"methodType": "off-site"
