Checkpoint: Basic solution exists and has been tested on desktop browsers.  More testing and features needed.

--- a/package.json
+++ b/package.json
@@ -91,8 +91,8 @@
     "morgan": "1.2.0",
     "ms": "0.7.1",
     "node-sass": "3.7.0",
+    "notifications-panel": "1.1.14",
     "npm-run-all": "4.0.2",
-    "notifications-panel": "1.1.15",
     "numeral": "2.0.4",
     "page": "1.6.4",
     "percentage-regex": "3.0.0",
@@ -121,6 +121,7 @@
     "redux-thunk": "1.0.0",
     "rtlcss": "2.0.5",
     "sanitize-html": "1.11.1",
+    "scrollbar-width": "3.1.1",
     "semver": "5.1.0",
     "social-logos": "1.0.1",
     "socket.io-client": "1.4.5",
